--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,8 @@
       "src": "app.py",
       "use": "@vercel/python",
       "config": {
-        "installCommand": "apt-get update && apt-get install -y python3-distutils && apt-get install -y build-essential && apt-get install -y python3-dev && pip install -r requirements.txt"
+        "maxLambdaSize": "15mb",  // Opcional: Define o tamanho máximo da função lambda
+        "installCommand": "apt-get update && apt-get install -y python3-distutils build-essential python3-dev && pip install --upgrade pip setuptools wheel && pip install -r requirements.txt"
       }
     }
   ]
