--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
       "config": {
         "maxLambdaSize": "20mb",
         "pythonVersion": "3.9",
-        "installCommand": "pip install -r requirements.txt"
+        "installCommand": "pip3 install -r requirements.txt"
       }
     }
   ]
